--- a/app/webroot/css/menber_input.css
+++ b/app/webroot/css/menber_input.css
@@ -40,3 +40,34 @@ main form input{
 .button01{
 	margin: 10px 0 10px 10px;
 }
+
+/* buy_input */
+dl{
+	width: 100%;
+}
+dt{
+	width: 20%;
+	color: #fff;
+	background: #000;
+	padding: 10px;
+	border: solid 1px #777;
+	float: left;
+	height: 50px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+dd{
+	width: 80%;
+	color: #000;
+	background: #fff;
+	border: solid 1px #777;
+	padding: 10px;
+	margin: 0 0 5px 0;
+	height: 50px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	float: left;
+	overflow: auto;
+}
