--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -1,16 +1,21 @@
 /* IMPORT RESET */
-@import url("reset.css");
+/*@import url("reset.css");*/
 
 /* IMPORT 12 COLUMN RESPONSIVE GS */
-@import url("responsive.gs.12col.css");
+/*@import url("responsive.gs.12col.css");*/
 
 
 /*	EXAMPLE STYLES */
+*{
+    color: #000;
+}
 body {
 	font-family: sans-serif;
 	color: white;
 }
-
+ol, ul { 
+    list-style: none; 
+}
 header {
 	line-height: 1em;
 	text-align: center;
@@ -104,30 +109,7 @@ footer {
 	}
 }
 /* 上書き */
-@media ( min-width : 768px ) {
-	/* pc */
-	.gutters .col {
-		margin-left: 0%;
-	}
-	
-	.gutters .col:first-child { 
-		margin-left: 0; 
-	}
 
-}
-/*	COLUMN WIDTH ON DISPLAYS +768px 
-	You might need to play with media queries here to suite your design. */
-@media ( min-width : 768px ) {
-	.span_13 { width: 40%; }
-	.gutters .span_13 { width: 40%; }
-	.span_14 { width: 60%; }
-	.gutters .span_14 { width: 60%; }
-	
-	.span_15 { width: 30%; }
-	.gutters .span_15 { width: 30%; }
-	.span_16 { width: 70%; }
-	.gutters .span_16 { width: 70%; }
-}
 /* ボタンバリエーション */
 #title{
 	background-image: url(../img/teep.png);
