--- a/app/webroot/css/buy_comfirm.css
+++ b/app/webroot/css/buy_comfirm.css
@@ -4,23 +4,20 @@ main{
 	margin: 50px 0px;
 }
 main form{
-	width: 382px;
+	width: 80%;
 	margin: 10px auto;
 	padding: 30px 0;
 	border: dotted 1px #000;
 	padding: 20px;
 	border-radius: 5px;
 }
-main form lavel{
+main form label{
 	width: 130px;
 	text-align: center;
 	margin: 3px 0px;
-	font-family: 'hannari';
+/*	font-family: 'hannari';*/
 	text-rendering: optimizeLegibility;
-}
-#ck_box{
-	text-align: left;
-	margin: 14px 0 0 -100px;
+	float: left;
 }
 #dm_span{
 	font-size: 0.9em;
@@ -34,7 +31,7 @@ main form input{
 	margin: 10px 0px;
 }
 #bt_box{
-	width: 200px;
+	width: 80%;
 	margin: 0 auto;
 }
 .button01{
@@ -46,7 +43,7 @@ dl{
 	width: 100%;
 }
 dt{
-	width: 20%;
+	width: 30%;
 	color: #fff;
 	background: #000;
 	padding: 10px;
@@ -58,7 +55,7 @@ dt{
 	box-sizing: border-box;
 }
 dd{
-	width: 80%;
+	width: 70%;
 	color: #000;
 	background: #fff;
 	border: solid 1px #777;
@@ -85,4 +82,90 @@ ul li{
 }
 #seikyu{
 	background: #d00;
+}
+/*モーダル上書き*/
+
+#modal{
+	display:none;
+	position:fixed;
+	width: 500px;
+	height: 300px;
+	background: #fff;
+	top: 10%;
+	margin: 0 auto;
+	border: solid 1px #ccc;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	padding: 10px;
+	overflow: auto;
+}
+#modal_back{
+	display:none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0.3;
+	background: #ddd;
+}
+
+#modal a.close{
+	display: block;
+	position:absolute;
+	right:10px;
+	top:10px;
+	background: #000;
+	color: #fff;
+	width: 20px;
+	height: 10px;
+	padding: 5px 20px 20px 5px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+	text-decoration: none;
+	text-align: center;
+}
+#modal label{
+	
+}
+
+#modal h2{
+	margin: 0 0 0 10px;
+	padding: 0 10px 0 20px;
+	width: 120px;
+	border: 1px solid #000;
+	margin: 0 10px 0 0;
+}
+#modal .input label{
+	padding: 5px 0 0 0;
+}
+#modal p{
+	text-align: center;
+}
+#modal .input{
+	width: 500px;
+	margin: 0 auto;
+}
+#modal .input label{
+	margin: 0 0 0 40px;
+}
+#modal .submit input{
+	background: #000;
+	color: #fff;
+	border: 1px solid #000;
+	border-radius: 2px;
+	padding: 5px 10px;
+	letter-spacing: 5px;
+	margin: 0 0 0 0px;
+	cursor: pointer;
+	font-size: 0.7em;
+}
+#modal .submit input:hover{
+	background: #ccc;
+	color: #555;
 }
