--- a/app/webroot/css/buy_complete.css
+++ b/app/webroot/css/buy_complete.css
@@ -1,13 +1,34 @@
 /* buy_complete.css */
 main{
+	width: 400px;
 	color: #000;
-	margin: 50px 0px;
+	margin: 0 auto;
+	text-align: center;
+	//background: #cc0;
 }
-main span{
-	display: block;
+main p{
 	text-align: center;
 	font-family: 'hannari';
 }
+.thanks{
+	font-size: 1.3em;
+	color: #999;
+	margin: 30px 0;
+	display: block;
+}
+main span{
+	text-align: center;
+	font-family: 'hannari';
+	background: #ff0;
+	padding: 0 10px;
+}
 .button01{
 	margin: 10px 0 10px 10px;
+}
+.formail{
+	margin: 10px 0 40px 0;
+	color: #999;
+}
+main a{
+	color: #777;
 }
