--- a/app/webroot/css/buy_input.css
+++ b/app/webroot/css/buy_input.css
@@ -11,12 +11,14 @@ main form{
 	padding: 20px;
 	border-radius: 5px;
 }
-main form lavel{
+main form label{
 	width: 130px;
 	text-align: center;
 	margin: 3px 0px;
 	font-family: 'hannari';
 	text-rendering: optimizeLegibility;
+	float: left;
+	padding: 5px 0 0 0;
 }
 #ck_box{
 	text-align: left;
@@ -45,7 +47,7 @@ dl{
 	width: 100%;
 }
 dt{
-	width: 20%;
+	width: 30%;
 	color: #fff;
 	background: #000;
 	padding: 10px;
@@ -57,7 +59,7 @@ dt{
 	box-sizing: border-box;
 }
 dd{
-	width: 80%;
+	width: 70%;
 	color: #000;
 	background: #fff;
 	border: solid 1px #777;
@@ -69,4 +71,106 @@ dd{
 	box-sizing: border-box;
 	float: left;
 	overflow: auto;
+}
+label{
+	display: block;
+	maargin: 0 0 0 -100px;
+}
+
+.checkbox{
+	height: 70px;
+}
+.checkbox:after{
+	clear: both;
+}
+.checkbox input{
+	float: left;
+	margin: 20px 0 0 -60px;
+}
+.checkbox label{
+	margin: -25px 0 0 60px;
+	width: 280px;
+	text-align: center;
+}
+.input01{
+	width: 150px;
+}
+.input02{
+	width: 110px;
+}
+.loginform .submit input{
+	background: #000;
+	width: 200px;
+	border: 1px solid #000;
+	border-radius: 2px;
+	padding: 2px;
+	color: #fff;
+	cursor: pointer;
+	margin: 0 0 0 38%;
+}
+.loginform .submit input:hover{
+	background: #ccc;
+	color: #555;
+}
+/*モーダル上書き*/
+
+#modal{
+	display:none;
+	position:fixed;
+	width:70%;
+	height: 80%;
+	background: #fff;
+	bottom: 25%;
+	left: 15%;
+	border: solid 1px #ccc;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	padding: 10px;
+	//overflow: auto;
+}
+#modal_back{
+	display:none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0.3;
+	background: #ddd;
+}
+
+#modal a.close{
+	display: block;
+	position:absolute;
+	right:10px;
+	top:10px;
+	background: #000;
+	color: #fff;
+	width: 20px;
+	height: 10px;
+	padding: 5px 20px 20px 5px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+	text-decoration: none;
+	text-align: center;
+}
+#modal .submit input{
+	background: #000;
+	color: #fff;
+	border: 1px solid #000;
+	border-radius: 2px;
+	padding: 10px 20px;
+	letter-spacing: 5px;
+	margin: 0 0 0 50%;
+	cursor: pointer;
+	font-size: 0.9em;
+}
+#modal .submit input:hover{
+	background: #ccc;
+	color: #555;
 }
