--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -1,35 +1,21 @@
 /* IMPORT RESET */
-/*@import url("reset.css");*/
+@import url("reset.css");
 
 /* IMPORT 12 COLUMN RESPONSIVE GS */
-/*@import url("responsive.gs.12col.css");*/
+@import url("responsive.gs.12col.css");
 
 
 /*	EXAMPLE STYLES */
-*{
-    color: #000;
-}
 body {
 	font-family: sans-serif;
 	color: white;
 }
-ol, ul { 
-    list-style: none; 
-}
+
 header {
 	line-height: 1em;
 	text-align: center;
 	background: #333;
 	font-family: 'hannari';
-}
-#kamemilogo{
-	margin: 0px 0px 15px 20px;
-	height: 90px;
-	float: left;
-}
-#kamemilogo img{
-
-	width: 160px;
 }
 @font-face {
     font-family: 'hannari';
@@ -42,26 +28,6 @@ header {
 #ulcopy{
 	float: left;
 }
-header ul{
-	position: relative;
-}
-header ul li{
-	float: left;
-	margin:  10px 10px  10px 10px;
-}
-header ul li a{
-	text-decoration: none;
-	color: #cab274;
-	font-family: 'hannari';
-	text-shadow: 1px 1px 1px #444;
-	text-rendering: optimizeLegibility;
-	font-size: 1.2em;
-}
-
-header ul li a:hover{
-	color: #ddd;
-}
-
 
 article {
 }
@@ -95,11 +61,137 @@ footer {
 	text-align: center;
 	background: #BBB;
 	color: #eee;
+	margin: 20px 0 0 0;
 }
 /* メディアクエリ */
 @media ( max-width : 769px ) {
 	/*iphone*/
+	header{
+		height: 40px;
+		width: 100%;
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 100;
+	}
+	#kamemilogo{
+		display:none;
+		visibility: hidden;
+	}
+	#kamemilogo_mini{
+		margin: 0px 0px 15px 20px;
+		height: 90px;
+		float: left;
+		top: 0;
+	}
+	.copy{
+		display: block;
+		position: fixed;
+		top: 3px;
+		width: 300px;
+		z-index: 150;
+	}
+	#content{
+		margin: 45px 0 0 0;
+	}
+	/* headernav */
+	#hamburger-botton{
+		display: block;
+		position: fixed;
+		width: 30px;
+		height:5px;
+		top:0;
+		right:0;
+		margin: 10px;
+		cursor: pointer;
+		background:#c00;
+		z-index: 100;
+	}
 
+	#hamburger-botton::before {
+		display: block;
+		content:' ';
+		position: fixed;
+		width:30px;
+		height:5px;
+		top:15px;
+		right:10px;
+		background:#333;
+		cursor: pointer;
+		z-index: 150;
+	}
+	#hamburger-botton::after {
+		display: block;
+		content:' ';
+		position: fixed;
+		width:30px;
+		height:5px;
+		top:25px;
+		right: 10px;
+		background:#333;
+		cursor: pointer;
+		z-index: 150;
+	}
+	#hamburger-fix{
+		position: fixed;
+		background: #cca;
+		width: 100%;
+		height: 100%;
+		opacity: 0.4;
+		top: 0;
+		visibility:hidden;
+	}
+	
+	#nav_box{
+		position: fixed;
+		padding: 10px;
+		background: #333;
+		margin: 40px 0 0 0;
+		width: 250px;
+		right: 0;
+		visibility:hidden;
+		z-index: 200;
+		
+	}
+	#name_box01{
+		padding: 10px;
+	}
+	#name_box02{
+		display:none;
+		visibility: hidden;
+	}
+	header ul{
+	}
+	header ul li{
+		background: #555;
+		width: 100%;
+		margin: 0px;
+		padding: 10px;
+		border-bottom: dotted 1px #ccc;
+	}
+	header ul li:last-child{
+		border: none;
+	}
+	header ul li a{
+		text-decoration: none;
+		color: #cab274;
+		font-family: 'hannari';
+		text-shadow: 1px 1px 1px #444;
+		text-rendering: optimizeLegibility;
+		font-size: 1.2em;
+		cursor: pointer;
+		width: 500px;
+		display: block;
+		padding: 10px 50px 10px 25px;
+		letter-spacing: 2px;
+	}
+
+	header ul li a:hover{
+		color: #333;
+		background: #fff;
+		text-shadow: 1px 1px 1px #fff;
+		
+	}
 }
 @media ( min-width : 768px ) {
 	/*pc*/
@@ -107,9 +199,106 @@ footer {
 		float: left;
 		margin: 40px 0 0 0;
 	}
+	#kamemilogo{
+		margin: 0px 0px 15px 20px;
+		height: 90px;
+		float: left;
+	}
+	#kamemilogo img{
+
+		width: 160px;
+	}
+	#kamemilogo_mini{
+		display:none;
+		visibility: hidden;
+	}
+
+	/* headernav */
+	#name_box01{
+		display:none;
+		visibility: hidden;
+	}
+	header ul{
+		position: relative;
+	}
+	header ul li{
+		float: left;
+		margin:  10px 10px  10px 10px;
+	}
+	header ul li a{
+		text-decoration: none;
+		color: #cab274;
+		font-family: 'hannari';
+		text-shadow: 1px 1px 1px #444;
+		text-rendering: optimizeLegibility;
+		font-size: 1.2em;
+	}
+
+	header ul li a:hover{
+		color: #ddd;
+	}
+
 }
 /* 上書き */
+@media ( min-width : 768px ) {
+	/* pc */
+	.gutters .col {
+		margin-left: 0%;
+	}
+	
+	.gutters .col:first-child { 
+		margin-left: 0; 
+	}
 
+	/* headernav */
+	#nav_box{
+		display:block;
+		visibility: visible;
+	}
+	header ul{
+		position: relative;
+		display:block;
+		visibility: visible;
+	}
+	header ul li{
+		float: left;
+		margin:  10px 10px  10px 10px;
+		display:block;
+		visibility: visible;
+	}
+	header ul li a{
+		text-decoration: none;
+		color: #cab274;
+		font-family: 'hannari';
+		text-shadow: 1px 1px 1px #444;
+		text-rendering: optimizeLegibility;
+		font-size: 1.2em;
+		display:block;
+		visibility: visible;
+	}
+
+	header ul li a:hover{
+		color: #ddd;
+	}
+	#hamburger-botton{
+		display:none;
+		visibility: hidden;
+	}
+
+}
+/*	COLUMN WIDTH ON DISPLAYS +768px 
+	You might need to play with media queries here to suite your design. */
+@media ( min-width : 768px ) {
+	.span_13 { width: 40%; }
+	.gutters .span_13 { width: 40%; }
+	.span_14 { width: 60%; }
+	.gutters .span_14 { width: 60%; }
+	
+	.span_15 { width: 30%; }
+	.gutters .span_15 { width: 30%; }
+	.span_16 { width: 70%; }
+	.gutters .span_16 { width: 70%; }
+}
 /* ボタンバリエーション */
 #title{
 	background-image: url(../img/teep.png);
@@ -129,6 +318,7 @@ footer {
 	transform: rotate(2deg);
 	margin: 0 0 0 40px;
 }
+/* ショートボタン */
 .button01{
 	width: 80px;
 	padding: 8px 0;
@@ -139,6 +329,102 @@ footer {
 	-o-border-radius: 2px;
 	border-radius: 2px;
 	border: solid 1px #000;
+	cursor: pointer;
+}
+/*ロングボタン*/
+.button02{
+	width: 50%;
+	padding: 8px 0;
+	cursor: pointer;
+	margin: 0 auto 0 25%;
+	text-align: center;
+	letter-spacing: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	-o-border-radius: 2px;
+	border-radius: 2px;
+	border: solid 1px #000;
+	text-decoration: none;
+	background: #666;
+}
+.button02:hover{
+	background: #777;
+	color: #fff;
+}
+.button03::before{
+	display: inline-block;
+	content: "";
+	height: 0;
+	width: 0;
+	border: 12px solid transparent;
+	border-left: 12px solid #000;
+	margin: 0px 0 0 -15px;
+	position: absolute;
+}
+.button03{
+	width: 50%;
+	padding: 8px 6px 8px 18px;
+	cursor: pointer;
+	margin: 10px auto 0px 10px;
+	text-align: center;
+	letter-spacing: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	-o-border-radius: 2px;
+	border-radius: 2px;
+	border: solid 1px #000;
+	text-decoration: none;
+	color: #000;
+}
+.button03:hover{
+	background: #777;
+	color: #ccc;
+}
+.orderSubmit{
+	width: 40%;
+	padding: 8px 6px;
+	cursor: pointer;
+	margin: 0 auto 0 50%;
+	text-align: center;
+	letter-spacing: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	-o-border-radius: 2px;
+	border-radius: 2px;
+	border: solid 1px #666;
+	text-decoration: none;
+	background: #666;
+	font-size: 1em;
+	letter-spacing: 3px;
+	font-weight: bold;
+}
+.orderSubmit:hover{
+	background: #ccc;
+	color: #555;
+}
+.margin00{
+	margin: 0 auto 0 30%;
+}
+.submit02{
+	margin: 0 auto 10px 30%;
+}
+.resetbutton{
+	width: 100px;
+	padding: 0px 20px;
+}
+.histry{
+	display: block;
+	background: #666;
+	width: 200px;
+	text-align: center;
+	margin: 10px auto;
+	text-decoration: none;
+	border-radius: 2px;
+	color: #fff;
+}
+.histry:hover{
+	background: #888;
+	color: #fff;
 }
 /* メッセージ */
 .flash_login{
@@ -146,13 +432,13 @@ footer {
 	left: 0px;
 	width: 100%;
 	padding: 20px 0;
-	color: #fff;
+	color: #000;
 	text-align: center;
 	background: #ff0;
 	z-index: 100;
 }
 #comment{
-	margin: 0 auto;
+	margin: 60px auto;
 }
 #comment p{
 	color: #000;
