--- a/app/webroot/css/menber_input.css
+++ b/app/webroot/css/menber_input.css
@@ -11,12 +11,14 @@ main form{
 	padding: 20px;
 	border-radius: 5px;
 }
-main form lavel{
+main form label{
 	width: 130px;
 	text-align: center;
 	margin: 3px 0px;
 	font-family: 'hannari';
 	text-rendering: optimizeLegibility;
+	float: left;
+	padding: 5px 0 0 0;
 }
 #ck_box{
 	text-align: left;
@@ -70,4 +72,108 @@ dd{
 	box-sizing: border-box;
 	float: left;
 	overflow: auto;
+}
+
+.submit input{
+	background: #000;
+	width: 200px;
+	border: 1px solid #000;
+	border-radius: 2px;
+	padding: 2px;
+	color: #fff;
+	cursor: pointer;
+	margin: 0 0 0 35%;
+}
+.submit input:hover{
+	background: #ccc;
+	color: #555;
+}
+.button04{
+	background: #000;
+	width: 200px;
+	border: 1px solid #000;
+	border-radius: 2px;
+	padding: 2px;
+	color: #fff;
+	cursor: pointer;
+	letter-spacing: 8px;
+	clear: both;
+	margin: 0 0 0 80px;
+}
+.button04:hover{
+	background: #ccc;
+	color: #555;
+}
+.checkbox{
+	height: 70px;
+}
+.checkbox:after{
+	clear: both;
+}
+.checkbox input{
+	float: left;
+	margin: 20px 0 0 -60px;
+}
+.checkbox label{
+	margin: -25px 0 0 60px;
+	width: 280px;
+	text-align: center;
+}
+.input01{
+	width: 150px;
+}
+.input02{
+	width: 110px;
+}
+/*モーダル上書き*/
+
+#modal{
+	display:none;
+	position:fixed;
+	width:50%;
+	height: 500px;
+	background: #fff;
+	bottom: 25%;
+	left: 25%;
+	border: solid 1px #ccc;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	padding: 10px;
+	//overflow: auto;
+}
+#modal_back{
+	display:none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0.3;
+	background: #ddd;
+}
+
+#modal a.close{
+	display: block;
+	position:fixed;
+	right:10px;
+	top:10px;
+	background: #000;
+	color: #fff;
+	width: 20px;
+	height: 10px;
+	padding: 5px 20px 20px 5px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+	text-decoration: none;
+	text-align: center;
+}
+#display_in{
+	width: 100%;
+	height: 100%;
+	position: fixed;
 }
